--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head 
         meta(charset='utf-8')
-        link(rel='stylesheet' href='/css/signup.css')
+        link(rel='stylesheet' href='/css/style.css')
         title signup
     body
         main
