--- a/views/error.pug
+++ b/views/error.pug
@@ -1,10 +1,8 @@
-doctype html
-html
-    head 
-        meta(charset='utf-8')
-        link(rel='stylesheet' href='/css/style.css')
-        title error
-    body
-        main
-            h1 #{message}
-            h2 #{error.status}
+extends layout
+
+block content
+    header 
+        div= title
+    main
+        h1= message
+        h2= error.status
