--- a/views/article.pug
+++ b/views/article.pug
@@ -19,8 +19,10 @@ block content
                 header= articleTitle
                 img(src=img alt=articleTitle)
                 main-text= mainText
+                form(action=`/articles/like/${number}`,method="post")
+                    input(type="submit", value=`♡${like}`)
             if user
-                form(action= actionURL,method="post")
+                form(action= `/articles/comment/${number}`,method="post")
                     header= user
                     input(type="text", name="comment", placeholder="댓글을 입력해 주세요")
                     input(type="submit", value="submit")
