--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .body-header{
-    background: #414848;
+    background: #476269;
     display:flex; 
     padding : 10px;
 }
@@ -33,14 +33,14 @@
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
 	padding: 2px;
-	background: #6d6d6d;
-	border: 1px solid  #6d6d6d;
+	background: #40a798;
+	border: 1px solid  #40a798;
 	border-radius: 5px;
 	cursor: pointer;
 }
 
 body {
-	background: #E0E0D8;
+	background: #f5eeeb;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight:300;
 	text-align: left;
@@ -48,19 +48,99 @@ body {
 	height: 500px;
 }
 
+.article-section {
+	width: 600px;
+	margin: 60px auto;
+	background: #f1f1f1;
+	border: 1px solid #f1f1f1;
+	border-radius: 5px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+}
+
+.article-section img{
+	width : 100%;
+}
+
+.article-section .header{
+	padding: 10px 10px 10px 10px;
+	font-family: 'Bree Serif', serif;
+	font-weight: 300;
+	font-size: 24px;
+	line-height:34px;
+	color: #414848;
+	text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
+	margin-bottom: 10px;
+}
+
+.like{
+	padding: 0px 10px 5px 10px;
+}
+
+.comment-input{
+	margin: 5px 10px 5px 10px;
+	height: 40px;
+	background: #e4e4e4;
+}
+
+.comment-input #login{
+	height: 40px;
+	cursor: pointer;
+	width : 100%;
+}
+
+.comment-input #text{
+	height: 100%;
+	width: 530px;
+}
+
+.comment-input #submit{
+	cursor: pointer;
+	height: 100%;
+	width: 50px;
+	color: #fff;
+	background: #40a798;
+}
+
+.article-section p{
+	padding: 0px 10px 10px 10px;
+	font-size: 18px;
+	line-height: 16px;
+	text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
+}
+
+.comments{
+	align-items: center;
+	display: flex;
+	padding: 5px 10px 10px 10px;
+}
+
+.comments #user{
+	width : 100px;
+}
+
+.comments #comment{
+	padding: 0 0 0 10px;
+	border-left: groove;
+	width : 480px;
+	word-break: break-all;
+}
+
 .auth-form {
 	width: 300px;
 	margin: 200px auto;
 	position: relative;
 	
-	background: #f3f3f3;
-	border: 1px solid #fff;
+	background: #f1f1f1;
+	border: 1px solid #f1f1f1;
 	border-radius: 5px;
 	
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
+
 
 
 .auth-form .header {
@@ -128,8 +208,8 @@ body {
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
 	
-	background: #6d6d6d;
-	border: 1px solid #6d6d6d;
+	background: #476269;
+	border: 1px solid #476269;
 	border-radius: 5px;
 	cursor: pointer;
 	
