--- a/views/article.pug
+++ b/views/article.pug
@@ -4,23 +4,25 @@ block content
     if message
         script alert('로그인이 필요합니다.') 
 
-    header(class="body-header")
-        div(class="title", onclick="location.href='/'", style="cursor:pointer;") NEWS
-        if user
-            div
-                form(action="/auth/logout",method="post", class="form")
-                    input(type="submit",value="Log out", class="button")
-        else 
-            div(style="display:flex")
-                form(action="/auth/login", method="get", class="form")
-                    input(type="submit",value="Log in", class="button")
-                form(action="/auth/signup", method="get", class="form")
-                    input(type="submit",value="Sign up", class="button")
+    block content
+    header(class="ui fixed inverted menu")
+        div(class="ui container")
+            a(href="/",class="header item")
+                img(class="logo",src="https://user-images.githubusercontent.com/26920620/62207025-0a5cce80-b3ce-11e9-87e7-452c42b51b5c.png",style='margin-right:1.5em')
+                = `NEWS`
+            div(class="right menu")
+                if user
+                    form(id="magic-form",action="/auth/logout", method="post",style="display:none")
+                    a(href="/auth/logout",class="item",
+                    onclick="event.preventDefault();document.getElementById('magic-form').submit();") Log out 
+                else
+                    a(href="/auth/login",class="item") Log in 
+                    a(href="/auth/signup",class="item") Sign up 
     main
-        section(class="article-section")
+        div(class="ui main text container",style="margin:100px")
             article
-                img(src=img alt=articleTitle)
-                header(class="header")= articleTitle
+                img(src=img alt=articleTitle,style="width:100%")
+                h1(class="ui header")= articleTitle
                 p= mainText
                 form(action=`/articles/like/${number}`,method="post",class="like")
                     if hasLiked
@@ -29,19 +31,18 @@ block content
                         input(type="image",alt="Submit", src="https://user-images.githubusercontent.com/26920620/62191007-9dd1d780-b3ad-11e9-90b6-4f757a534511.png")
                         
                     span= like
-            if user
-                form(action= `/articles/comment/${number}`,method="post",class="comment-input")
-                    input(type="text", name="comment", placeholder="댓글을 입력해 주세요",id='text')
-                    input(type="submit", value="submit",id="submit")
-            else
-                form(action='/auth/login',class="comment-input")
-                    input(type="submit", value="로그인이 필요합니다.",id="login") 
-            content
-                if comments
-                    each val in comments
-                        div(class="comments")
-                            div(id="user")= val.user
-                            div(id="comment")= val.comment
-
-            
-            
+            div(class="ui comments",style="padding:0px 0 20px 0")
+                h3(class="ui dividing header") Comments
+                if user
+                    form(action= `/articles/comment/${number}`,method="post",class="ui form",style="padding:0px 0 20px 0")
+                        input(type="text", name="comment", placeholder="댓글을 입력해 주세요")
+                else
+                    form(action='/auth/login',class="ui form",style="padding:0px 0 20px 0")
+                        input(onclick="location.href='/auth/login'",type="text", placeholder="로그인이 필요합니다.",readonly, style="cursor:pointer") 
+                content
+                    if comments
+                        each val in comments
+                            div(class="comment")
+                                div(class="content")
+                                    div(class="author",style="margin: 0 0 5px 0;")= val.user
+                                    div(class="metadata",style="color:#A0A0A0")= val.comment
