refactor : 에러메세지 출력 변경
- 전달해준 메세지로 출력하도록 변경

--- a/views/article.pug
+++ b/views/article.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     if message
-        script alert('로그인이 필요합니다.') 
+        script alert(`#{message}`);
 
     block content
     header(class="ui fixed inverted menu")
