feat : 글 작성 페이지 이동 버튼 추가

--- a/views/articles.pug
+++ b/views/articles.pug
@@ -18,12 +18,17 @@ block content
                     a(href="/auth/signup",class="item") Sign up 
     main
         div(class="ui container")
-            div(class="ui three column doubling stackable grid",style="margin:100px")
+            div(class="ui three column doubling stackable grid",style="margin:100px 100px 50px 100px")
                 each article in articlesInPage
                     article(class="eight wide column", onclick=`location.href='/articles/${article.number}'`, style="cursor:pointer") 
                         div(class="ui segment")
                             img(src=article.img art=article.title, style="width:100%; object-fit:contain; height:250px")
                             h3(class="ui center aligned header", style="margin-top:5px")= article.title
+        if user
+            if user.authority == 'super'
+                div(class="ui right aligned container", style="margin:50px")
+                    button(onclick="location.href='/articles/form'",class="ui grey basic button") New Post
+        
         div(class="ui center aligned container",style="margin-bottom:50px")
             div(class="ui pagination menu")
                 each val in pages
