--- a/views/article.pug
+++ b/views/article.pug
@@ -27,10 +27,15 @@ block content
                 form(action=`/articles/like/${number}`,method="post",class="like")
                     if hasLiked
                         input(type="image",alt="Submit", src="https://user-images.githubusercontent.com/26920620/62191003-9b6f7d80-b3ad-11e9-9cdb-f0bf0dbdad61.png")
+
                     else
                         input(type="image",alt="Submit", src="https://user-images.githubusercontent.com/26920620/62191007-9dd1d780-b3ad-11e9-90b6-4f757a534511.png")
                         
                     span= like
+                if user        
+                    if user.authority == 'super'
+                        div(class="ui right aligned container")
+                            button(onclick=`location.href='/articles/form/${number}'`,class="ui grey basic button") Update
             div(class="ui comments",style="padding:0px 0 20px 0")
                 h3(class="ui dividing header") Comments
                 if user
